--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,28 @@
-name: Waka Readme
+name: WakaTime status update
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
-  workflow_dispatch:
+    # Runs at 12 am  '0 0 * * *'  UTC
+    - cron: "1 0 * * *"
+
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: Update the WakaTime Stat
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      # Use avinal/Profile-Readme-WakaTime@<latest-release-tag> for latest stable release
+      # Do not change the line below until you have forked this repository
+      # If you have forked this project you can use <username>/Profile-Readme-WakaTime@master instead
+      - uses: aceDavon/Profile-Readme-WakaTime@main
         with:
+          # WakaTime API key stored in secrets, do not directly paste it here
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          # Automatic github token
+          GITHUB_TOKEN: ${{ github.token }}
+          # Branch - newer GitHub repositories have "main" as default branch, change to main in that case, default is master
+          BRANCH: "main"
+          # Manual Commit messages - write your own messages here
+          COMMIT_MSG: "Automated Coding Activity Update :alien:"
           SHOW_TOTAL_CODE_TIME: true
           SHOW_LANGUAGE: true
           SHOW_OS: true
